--- a/main.ipynb
+++ b/main.ipynb
@@ -2,31 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-06-25 16:41:15.957433: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-06-25 16:41:15.962378: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-06-25 16:41:16.003433: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-06-25 16:41:18.943931: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "TensorFlow version: 2.16.1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.72674936,  0.06779668, -0.5114388 , -0.7706605 ,  1.001079  ,\n",
+       "        -0.3104157 , -0.9596643 , -0.41409668, -0.77391607, -0.19397326]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import tensorflow as tf\n",
-    "print(\"TensorFlow version:\", tf.__version__)"
+    "print(\"TensorFlow version:\", tf.__version__)\n",
+    "\n",
+    "mnist = tf.keras.datasets.mnist\n",
+    "\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
+    "\n",
+    "model = tf.keras.models.Sequential([\n",
+    "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "  tf.keras.layers.Dense(128, activation='relu'),\n",
+    "  tf.keras.layers.Dropout(0.2),\n",
+    "  tf.keras.layers.Dense(10)\n",
+    "])\n",
+    "\n",
+    "predictions = model(x_train[:1]).numpy()\n",
+    "predictions"
    ]
   }
  ],
