--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -509,6 +509,24 @@
    "source": [
     "data.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean+std:  122.54 ± 28.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "bmp = data['bpm']\n",
+    "print('mean+std: ', round(bmp.mean(), 2), '±', round(bmp.std(), 2))"
+   ]
   }
  ],
  "metadata": {
