--- a/dataset_analysis.ipynb
+++ b/dataset_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'2.2.2'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "[952 rows x 24 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>bpm</th>\n",
+       "      <th>danceability_%</th>\n",
+       "      <th>valence_%</th>\n",
+       "      <th>energy_%</th>\n",
+       "      <th>acousticness_%</th>\n",
+       "      <th>instrumentalness_%</th>\n",
+       "      <th>liveness_%</th>\n",
+       "      <th>speechiness_%</th>\n",
+       "      <th>streams</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Seven (feat. Latto) (Explicit Ver.)</td>\n",
+       "      <td>125</td>\n",
+       "      <td>80</td>\n",
+       "      <td>89</td>\n",
+       "      <td>83</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>141381703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LALA</td>\n",
+       "      <td>92</td>\n",
+       "      <td>71</td>\n",
+       "      <td>61</td>\n",
+       "      <td>74</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>133716286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vampire</td>\n",
+       "      <td>138</td>\n",
+       "      <td>51</td>\n",
+       "      <td>32</td>\n",
+       "      <td>53</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>6</td>\n",
+       "      <td>140003974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cruel Summer</td>\n",
+       "      <td>170</td>\n",
+       "      <td>55</td>\n",
+       "      <td>58</td>\n",
+       "      <td>72</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>15</td>\n",
+       "      <td>800840817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>WHERE SHE GOES</td>\n",
+       "      <td>144</td>\n",
+       "      <td>65</td>\n",
+       "      <td>23</td>\n",
+       "      <td>80</td>\n",
+       "      <td>14</td>\n",
+       "      <td>63</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>303236322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>947</th>\n",
+       "      <td>My Mind &amp; Me</td>\n",
+       "      <td>144</td>\n",
+       "      <td>60</td>\n",
+       "      <td>24</td>\n",
+       "      <td>39</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>91473363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>948</th>\n",
+       "      <td>Bigger Than The Whole Sky</td>\n",
+       "      <td>166</td>\n",
+       "      <td>42</td>\n",
+       "      <td>7</td>\n",
+       "      <td>24</td>\n",
+       "      <td>83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>121871870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>949</th>\n",
+       "      <td>A Veces (feat. Feid)</td>\n",
+       "      <td>92</td>\n",
+       "      <td>80</td>\n",
+       "      <td>81</td>\n",
+       "      <td>67</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>73513683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>950</th>\n",
+       "      <td>En La De Ella</td>\n",
+       "      <td>97</td>\n",
+       "      <td>82</td>\n",
+       "      <td>67</td>\n",
+       "      <td>77</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>133895612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>951</th>\n",
+       "      <td>Alone</td>\n",
+       "      <td>90</td>\n",
+       "      <td>61</td>\n",
+       "      <td>32</td>\n",
+       "      <td>67</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>96007391</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>952 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              track_name  bpm  danceability_%  valence_%  \\\n",
+       "0    Seven (feat. Latto) (Explicit Ver.)  125              80         89   \n",
+       "1                                   LALA   92              71         61   \n",
+       "2                                vampire  138              51         32   \n",
+       "3                           Cruel Summer  170              55         58   \n",
+       "4                         WHERE SHE GOES  144              65         23   \n",
+       "..                                   ...  ...             ...        ...   \n",
+       "947                         My Mind & Me  144              60         24   \n",
+       "948            Bigger Than The Whole Sky  166              42          7   \n",
+       "949                 A Veces (feat. Feid)   92              80         81   \n",
+       "950                        En La De Ella   97              82         67   \n",
+       "951                                Alone   90              61         32   \n",
+       "\n",
+       "     energy_%  acousticness_%  instrumentalness_%  liveness_%  speechiness_%  \\\n",
+       "0          83              31                   0           8              4   \n",
+       "1          74               7                   0          10              4   \n",
+       "2          53              17                   0          31              6   \n",
+       "3          72              11                   0          11             15   \n",
+       "4          80              14                  63          11              6   \n",
+       "..        ...             ...                 ...         ...            ...   \n",
+       "947        39              57                   0           8              3   \n",
+       "948        24              83                   1          12              6   \n",
+       "949        67               4                   0           8              6   \n",
+       "950        77               8                   0          12              5   \n",
+       "951        67              15                   0          11              5   \n",
+       "\n",
+       "       streams  \n",
+       "0    141381703  \n",
+       "1    133716286  \n",
+       "2    140003974  \n",
+       "3    800840817  \n",
+       "4    303236322  \n",
+       "..         ...  \n",
+       "947   91473363  \n",
+       "948  121871870  \n",
+       "949   73513683  \n",
+       "950  133895612  \n",
+       "951   96007391  \n",
+       "\n",
+       "[952 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = data[['track_name', 'bpm', 'danceability_%', 'valence_%', 'energy_%', 'acousticness_%', 'instrumentalness_%', 'liveness_%', 'speechiness_%', 'streams']]\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +876,7 @@
        "[952 rows x 2 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,13 +888,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +898,7 @@
        "<Axes: xlabel='bpm', ylabel='streams'>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
